# rust-2024-examples

./: Cargo.toml  README.md
src/: iflet.rs  keyword.rs  lib.rs  macros.rs  pattern.rs  rpit.rs  safety.rs
